# telegram-LeoLM-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  TODO.md  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
.github/: CODEOWNERS  COPILOT_INSTRUCTIONS.md
.github/workflows/: ci.yml  release-please.yml
bot/: __init__.py  config.py  database.py  handlers.py  main.py  models.py  rate_limiter.py  session.py  utils.py
bot/llm/: __init__.py  base.py  provider.py  service.py
bot/mcp/: __init__.py  base.py  manager.py
bot/mcp/plugins/: __init__.py  database.py  filesystem.py  news.py  web.py
k8s/: 01-config.yaml  02-storage.yaml  03-bot-deployment.yaml  04-postgres-deployment.yaml  05-redis-deployment.yaml  06-services.yaml  07-pgadmin-deployment.yaml  argocd-application.yaml
tests/: README.md  conftest.py
tests/integration/: test_database.py
tests/unit/: test_handlers.py  test_llm_service.py  test_mcp_manager.py  test_rate_limiter.py  test_session_manager.py
