[tool.poetry]
name = "telegram-llm-bot"
version = "0.1.0"
description = "Telegram bot with LLM integration and MCP extensibility"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.6"
openai = "^1.3"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
redis = "^5.0"
aiohttp = "^3.9"
pydantic = "^2.5"
pydantic-settings = "^2.1"
fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.24"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
aiofiles = "^23.2"
beautifulsoup4 = "^4.12"
lxml = "^4.9"
tiktoken = "^0.5"
prometheus-client = "^0.19"
structlog = "^23.2"
alembic = "^1.12"
psycopg2-binary = "^2.9"
telegramify-markdown = "^0.1.2"
feedparser = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
black = "^23.11"
ruff = "^0.1"
mypy = "^1.7"
pre-commit = "^3.5"
ipython = "^8.17"
types-aiofiles = "^23.2"
types-beautifulsoup4 = "^4.12"
types-redis = "^4.6"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
